@@ -1,3 +1,9 @@
+2009-04-24  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-uri.c (totem_add_subtitle):
+	Add the cache subtitles directory to the subtitle file
+	selection dialogue's shortcuts (Closes: #579860)
+
 2009-04-23  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/opensubtitles/opensubtitles.py:
